--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,3 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the project
       run: ./gradlew build
+      env:
+        TRAKT_ACCESS_TOKEN: ${{ secrets.TRAKT_ACCESS_TOKEN }}
+        TRAKT_CLIENT_ID: ${{ secrets.TRAKT_CLIENT_ID }}
+        TRAKT_CLIENT_SECRET: ${{ secrets.TRAKT_CLIENT_SECRET }}
