--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id "org.jetbrains.kotlin.kapt" version "1.3.61"
-    id 'maven-publish'
 }
 
 repositories {
@@ -44,18 +42,12 @@ dependencies {
     testImplementation 'org.jetbrains.kotlin:kotlin-test:1.3.61'
 }
 
-group = 'com.redissi.trakt'
-version = '1.0.0-SNAPSHOT'
+group = GROUP
+version = VERSION_NAME
 sourceCompatibility = '1.8'
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+apply from: "$rootDir/gradle/gradle-mvn-push.gradle"
