--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,14 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.3'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    api 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.7.1'
 
     implementation 'com.squareup.moshi:moshi:1.9.2'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
     implementation 'com.redissi.moshi-adapters-iso8601:adapters-jdk8:0.3.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    api 'com.squareup.okhttp3:okhttp:4.4.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
