--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ test {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.3'
+    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.3'
 
     api 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.7.1'
